--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -77,112 +77,6 @@ ul,li{
   margin-bottom: 20px;
 }
 
-.pagination {
-  margin: 20px 0;
-  text-align: right;
-}
-
-.plugins-tips {
-  padding: 20px 10px;
-  margin-bottom: 20px;
-}
-
-.el-button+.el-tooltip {
-  margin-left: 10px;
-}
-
-.el-table tr:hover {
-  background: #f6faff;
-}
-
-.mgb20 {
-  margin-bottom: 20px;
-}
-
-.move-enter-active,
-.move-leave-active {
-  transition: opacity .5s;
-}
-
-.move-enter,
-.move-leave {
-  opacity: 0;
-}
-
-
-
-
-
-
-/*BaseForm*/
-
-.form-box {
-  width: 600px;
-}
-
-.form-box .line {
-  text-align: center;
-}
-
-.el-time-panel__content::after,
-.el-time-panel__content::before {
-  margin-top: -7px;
-}
-
-.el-time-spinner__wrapper .el-scrollbar__wrap:not(.el-scrollbar__wrap--hidden-default) {
-  padding-bottom: 0;
-}
-
-
-
-
-
-
-/*Upload*/
-
-.pure-button {
-  width: 150px;
-  height: 40px;
-  line-height: 40px;
-  text-align: center;
-  color: #fff;
-  border-radius: 3px;
-}
-
-.g-core-image-corp-container .info-aside {
-  height: 45px;
-}
-
-.el-upload--text {
-  background-color: #fff;
-  border: 1px dashed #d9d9d9;
-  border-radius: 6px;
-  box-sizing: border-box;
-  width: 360px;
-  height: 180px;
-  text-align: center;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-}
-
-.el-upload--text .el-icon-upload {
-  font-size: 67px;
-  color: #97a8be;
-  margin: 40px 0 16px;
-  line-height: 50px;
-}
-
-.el-upload--text {
-  color: #97a8be;
-  font-size: 14px;
-  text-align: center;
-}
-
-.el-upload--text em {
-  font-style: normal;
-}
-
 /* //=============================='放大图片样式'============================== */
 #big-img-bg{
   position:fixed;
@@ -205,18 +99,18 @@ ul,li{
   width: 100%;
 
 }
-/* //=============================='end'============================== */
+/* //=============================='放大图片样式end'============================== */
 /* /=============================='清除element弹窗的默认样式'============================== */
 .clear_el_dialog{
   background: yellow;
+  /* padding: 0!important; */
 }
-.clear_el_dialog .el-dialog__header {
-  background: #5D81E4;
+.clear_el_dialog .el-dialog__header ,.clear_el_dialog .el-message-box__header{
   padding: 0 !important;
   border: 0 !important;
   height: 0;
 }
-.clear_el_dialog .el-dialog__body {
+.clear_el_dialog .el-dialog__body,.clear_el_dialog .el-message-box__content {
   padding: 0;
 }
 
@@ -241,78 +135,8 @@ ul,li{
   background-color: #e4e7ed;
   z-index: 1;
 }
-.clear_el_dialog .el-dialog__headerbtn{
+.clear_el_dialog .el-dialog__headerbtn,.clear_el_dialog .el-message-box__headerbtn{
   z-index: 99;
   top: 14px;
 }
-/* //=============================='dialog'============================== */
-.upload_text{
-  text-indent: 20px;
-}
-.upload_btn{
-  text-align: right;
-  padding: 20px;
-}
-.upload_btn button{
-  margin-left: 20px;
-}
-/*lizhenhe_css_end*/
-/* //=============================='修改element弹窗标题样式'============================== */
-.el-message-box__title span{
-  font-size: 16px;
-  color: #313131;
-}
-/* //=============================='修改弹窗'============================== */
-.el-message-box{
-  width:270px!important;
-/* height:178px; */
-background:rgba(255,255,255,1);
-border-radius:4px;
-position: relative;
-padding-bottom: 0!important;
-}
-.el-message-box__title{
-  font-size:16px;
-font-family:PingFangSC-Medium;
-font-weight:500;
-color:rgba(51,56,85,1)!important;
-}
-.el-message-box__content{
-  font-size:16px;
-font-family:PingFangSC-Medium;
-font-weight:500;
-color:rgba(51,56,85,1)!important;
-text-align: center;
-margin-top: 30px;
-padding: 0!important;
-}
-.el-message-box__status{
-  display: none!important;
-}
-.el-message-box__btns {
-  /* position: absolute; */
-  /* bottom: 0; */
-  margin-top: 30px;
-  width: 100%;
-  padding: 0!important;
-  display: flex;
-
-  /* flex-direction: row-reverse; */
-}
-.el-message-box__input{
-  width: 230px;
-  margin: 0 auto;
-}
-.el-message-box__btns button{
-  margin: 0 auto!important;
-  width: 50%;
-  border: 0;
-  background: #F5F5F5;
-}
-.el-message-box__btns .el-button--primary{
-  margin: 0 auto 20px!important;
-  background: #00B77E;
-}
-.el-message-box__btns .el-button+.el-button--primary{
-  margin: 0 auto!important;
-}
+/* /=============================='清除element弹窗的默认样式end'============================== */
